<resources>

    <string name="app_name">baas.io Startup</string>
    <string name="collection_hint">Collection name</string>
    <string name="key_hint_1">Key #1</string>
    <string name="value_hint_1">Value #1</string>
    <string name="key_hint_2">Key #2</string>
    <string name="value_hint_2">Value #2</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">baas.io Startup</string>

</resources>